--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,15 @@
     <dimen name="half_unit">4dp</dimen>
     <dimen name="one_unit">8dp</dimen>
     <dimen name="two_unit">16dp</dimen>
+    <dimen name="three_unit">24dp</dimen>
+    <dimen name="four_unit">32dp</dimen>
+    <dimen name="five_unit">40dp</dimen>
+    <dimen name="ten_unit">80dp</dimen>
+
+    <dimen name="xsmall_text">8sp</dimen>
+    <dimen name="small_text">12sp</dimen>
+    <dimen name="medium_text">16sp</dimen>
+    <dimen name="large_text">24sp</dimen>
+    <dimen name="xlarge_text">32sp</dimen>
 
 </resources>
