--- a/app/src/main/res/layout/fragment_permissions.xml
+++ b/app/src/main/res/layout/fragment_permissions.xml
@@ -9,8 +9,38 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/permissions_message"
+        android:text="@string/permissions_page_message"
         android:layout_marginBottom="@dimen/two_unit"/>
+
+    <LinearLayout
+        android:id="@+id/notifyGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/permission_notify" />
+
+        <Button
+            android:id="@+id/notifyPermissionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/permissions_button_text"
+            android:layout_margin="@dimen/two_unit"/>
+
+        <TextView
+            android:id="@+id/notifyPermissionGranted"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/permission_granted"
+            android:textStyle="bold"
+            android:layout_margin="@dimen/two_unit"
+            android:visibility="gone"/>
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
