--- a/app/src/main/res/layout/fragment_run_session.xml
+++ b/app/src/main/res/layout/fragment_run_session.xml
@@ -57,13 +57,13 @@
             android:textSize="@dimen/medium_text"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:text="00:00:00"/>
+            android:text="N\A"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/small_text"
-            android:text="Time"
+            android:text="Monster"
             android:layout_above="@id/monsterDistText"
             android:layout_alignStart="@id/monsterDistText"/>
 
