--- a/app/src/main/res/layout/fragment_run_session.xml
+++ b/app/src/main/res/layout/fragment_run_session.xml
@@ -82,6 +82,7 @@
             android:gravity="center">
 
             <TextView
+                android:id="@+id/monsterTypeText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/large_text"
@@ -92,11 +93,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/small_text"
-                android:text="Type"/>
+                android:text="Stamina"/>
 
 
             <TextView
-                android:id="@+id/monsterTypeText"
+                android:id="@+id/monsterStaminaText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/large_text"
