--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,12 +6,20 @@
     <dimen name="three_unit">24dp</dimen>
     <dimen name="four_unit">32dp</dimen>
     <dimen name="five_unit">40dp</dimen>
+    <dimen name="six_unit">48dp</dimen>
     <dimen name="ten_unit">80dp</dimen>
 
     <dimen name="xsmall_text">8sp</dimen>
     <dimen name="small_text">12sp</dimen>
     <dimen name="medium_text">16sp</dimen>
-    <dimen name="large_text">24sp</dimen>
-    <dimen name="xlarge_text">32sp</dimen>
+    <dimen name="large_text">20sp</dimen>
+    <dimen name="xlarge_text">24sp</dimen>
+
+    <dimen name="card_monster_size">160dp</dimen>
+    <dimen name="card_monster_descriptor_width">100dp</dimen>
+
+    <dimen name="button_standard_height">56dp</dimen>
+    <dimen name="button_bottom_height">72dp</dimen>
+    <dimen name="button_bottom_height_with_margin">80dp</dimen>
 
 </resources>
