--- a/app/src/main/res/layout/fragment_monster_settings.xml
+++ b/app/src/main/res/layout/fragment_monster_settings.xml
@@ -65,8 +65,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 app:boxBackgroundColor="@null"
-                app:errorEnabled="true"
-                android:hint="Start Value">
+                app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/startEdit"
@@ -75,16 +74,6 @@
                     android:inputType="numberDecimal"/>
             </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
-                android:id="@+id/startValueUnit"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginStart="@dimen/half_unit"
-                android:layout_marginEnd="@dimen/one_unit"
-                android:textSize="@dimen/large_text"
-                android:layout_gravity="center_vertical"
-                android:text="Minutes"/>
 
         </LinearLayout>
 
@@ -97,21 +86,13 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <com.google.android.material.slider.Slider
-                android:id="@+id/speedSlider"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:layout_marginTop="@dimen/half_unit"/>
-
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/speedHolder"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 app:boxBackgroundColor="@null"
-                app:errorEnabled="true"
-                android:hint="min/mile">
+                app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/speedEdit"
@@ -119,6 +100,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"/>
             </com.google.android.material.textfield.TextInputLayout>
+
 
         </LinearLayout>
 
@@ -131,21 +113,13 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <com.google.android.material.slider.Slider
-                android:id="@+id/staminaSlider"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:layout_marginTop="@dimen/half_unit"/>
-
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/staminaHolder"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 app:boxBackgroundColor="@null"
-                app:errorEnabled="true"
-                android:hint="min">
+                app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/staminaEdit"
