--- a/app/src/main/res/layout/item_large_text.xml
+++ b/app/src/main/res/layout/item_large_text.xml
@@ -3,6 +3,7 @@
     android:id="@android:id/text1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:padding="@dimen/one_unit"
     android:textSize="@dimen/large_text">
 
 </TextView>
