--- a/app/src/main/res/navigation/nav_main_app.xml
+++ b/app/src/main/res/navigation/nav_main_app.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_main_app"
-    app:startDestination="@id/runSessionFragment">
+    app:startDestination="@id/runSettingsFragment">
 
     <action
         android:id="@+id/globalToPermissions"
