--- a/app/src/main/res/layout/fragment_run_session.xml
+++ b/app/src/main/res/layout/fragment_run_session.xml
@@ -11,6 +11,16 @@
         android:layout_height="0dp"
         android:layout_weight="3"/>
 
+    <TextView
+        android:id="@+id/monsterLeftText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="@dimen/two_unit"
+        android:paddingEnd="@dimen/two_unit"
+        android:textSize="@dimen/medium_text"
+        android:textStyle="bold"
+        android:text="Monsters Left:"/>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
